# relational-state

./: .dockerignore  .gitignore  .gitmessage  .markdownlint.yaml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONSENT.md  Dockerfile  LICENSE  README-DOCKER.md  README-ENGINE.md  README-MCP.md  README.md  RELATIONAL.md  docker-compose.yml  plan-infra.md  pyproject.toml  requirements.txt  wip.md
.claude/: settings.json
.relational/: RELATIONAL-HOWTO.md  RELATIONAL.md
.relational/state/: rob-mosher.md
docker/: entrypoint.sh  start-mcp.sh
docs/: RELATIONAL-ARCHITECTURE.md  RELATIONAL-SCHEMA.md  VISUALIZATION.md  future.md  memory-compression-when-model-unavailable.md  memory-compression.md  memory-summarization-architectures.md  relational-end-to-end-flows.md  trust-schema.md  verification-service-outline.md
docs/prompts/: AGENTS-claude-sonnet-4.5.md  claude-sonnet-4.5.md  relational-state-engine.md
infra/: README.md
infra/terraform/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
legacy/: README-MCP.md  README.md
legacy/docker/: Dockerfile  README.md  compose.sh  compose.yml  entrypoint.sh  pytest.ini
scripts/: inspect_vector_store.py
src/mcp_server/: __init__.py  main.py  models.py  tools.py
src/relational_domain/: canonical_log.py  context_compiler.py  promotion.py  vector_store.py
src/relational_engine/: __init__.py  canonical_log.py  (+3 more)
src/relational_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_canonical_log.py  test_vector_store.py
(+24 files in other folders)
